--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,56 @@ ul, li {
     font-family: 'Open Sans Semibold';
     font-size: 20px;
 }
+
+/* Services */
+
+.services {
+    padding-top: 165px;
+    padding-bottom: 125px;
+    color: #000;
+    background: #e4fdf9;
+    text-align: center;
+}
+
+.our_card {
+    background: #fff;   
+    padding: 50px 40px 40px;
+    transition: .3s;
+    margin-bottom: 30px;
+}
+
+.our_card:hover {
+    background: #00897b;
+    color: #fff;
+    box-shadow: 0px 10px 12px -3px  rgba(0, 0, 0, 0.26);
+}
+
+.our_card:hover .icon {
+    color: #fff;
+}
+
+.our_card:hover .button-services {
+    border: 2px solid #fff;
+    color: #fff;
+}
+
+.icon {
+    transition: .3s; 
+    font-size: 60px;
+    color: #000;
+}
+
+.button-services {
+    margin-top: 20px;
+    transition: .3s;
+    color: #000;
+    text-transform: uppercase;
+    border: 2px solid #000;
+    background: transparent;
+    padding: 10px 12px 10px;
+    font-family: 'Open Sans Semibold';
+}
+
+.button-services:hover {
+    cursor: pointer;
+} 
