--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ ul, li {
 
 /* Header */
 
-.header > div {
+.header {
     color: #fff;
     text-align: center;
     padding: 180px 0;
@@ -52,26 +52,19 @@ ul, li {
 }
 
 .button {
+    text-transform: uppercase;
+    cursor: pointer;
     padding: 10px 25px;
     margin: 0 10px;
     color: #fff;
     transition: .3s;
-}
-
-.button_empty {
-    background: transparent;
-    border: 2px solid #fff;
-}
-
-.button_full {
     background: #00897b;
     border: 2px solid #00897b;
 }
 
-.button_empty:hover,
-.button_full:hover {
-    border: 2px dotted #fff;
-    background: #04574e;
+.button:hover {
+    background: transparent;
+    border: 2px solid #fff;
 }
 
 /* About us */
@@ -138,6 +131,7 @@ ul, li {
     transition: .3s; 
     font-size: 60px;
     color: #000;
+    padding-bottom: 20px;
 }
 
 .button-services {
@@ -154,3 +148,46 @@ ul, li {
 .button-services:hover {
     cursor: pointer;
 } 
+
+/* Portfolio */
+
+.portfolio {
+    text-align: center;
+    padding-top: 120px;
+    padding-bottom: 135px;
+}
+
+.portfolio button:hover,
+.focused {
+    color: #000;
+    border: 2px solid #00897b;
+    background: transparent;
+}
+
+.portfolio img {
+    margin-bottom: 30px;
+}
+
+.filter {
+    padding: 120px 0;
+}
+
+div[filter]:hover img {
+    filter: brightness(50%);
+    transition: .3s;
+}
+
+.text {
+    display: none;
+}
+
+div[filter]:hover .text {
+    display: block;
+    width: 100%;
+    color: #fff;
+    position: absolute;
+    top: 40%;
+    left: 0;
+    z-index: 3;
+    text-align: center;
+}
